[gd_scene load_steps=11 format=3 uid="uid://civ2pfgv3dchm"]

[ext_resource type="Script" uid="uid://ceghp231ggbxo" path="res://rhythmgame_menu/rg_gamemenu_assets/scripts/main_page.gd" id="1_cc0qa"]
[ext_resource type="Script" uid="uid://drlxc3aaln2e7" path="res://rhythmgame_menu/rg_gamemenu_assets/scripts/start_up_page.gd" id="2_omkak"]
[ext_resource type="Texture2D" uid="uid://x5jnceo0jflh" path="res://rhythmgame_menu/rg_gamemenu_assets/images/neon_glitch.jpg" id="3_apm6u"]
[ext_resource type="FontFile" uid="uid://dbhmrndrp70h0" path="res://rhythmgame_menu/rg_gamemenu_assets/font/game_over.ttf" id="4_gl2rg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y4ydu"]
bg_color = Color(0.18039216, 0.16078432, 0.30588236, 1)
border_color = Color(0.30588236, 0.8039216, 0.76862746, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_47v0h"]
bg_color = Color(0.101960786, 0.08627451, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rlhb6"]
bg_color = Color(0.23921569, 0.20784314, 0.46666667, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uxver"]
bg_color = Color(0.18039216, 0.16078432, 0.30588236, 1)
border_color = Color(0.30588236, 0.8039216, 0.76862746, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bx58v"]
bg_color = Color(0.101960786, 0.08627451, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sgmfo"]
bg_color = Color(0.23921569, 0.20784314, 0.46666667, 1)

[node name="MainPage" type="Node2D"]
script = ExtResource("1_cc0qa")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StartUpPage" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_omkak")

[node name="Background" type="TextureRect" parent="CanvasLayer/StartUpPage"]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 1152.0
offset_bottom = 653.0
texture = ExtResource("3_apm6u")
expand_mode = 1

[node name="Title" type="Label" parent="CanvasLayer/StartUpPage"]
layout_mode = 0
offset_left = 230.0
offset_top = 139.0
offset_right = 932.0
offset_bottom = 301.0
theme_override_colors/font_color = Color(0.979876, 0.5169392, 0.93222463, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_gl2rg")
theme_override_font_sizes/font_size = 288
text = "Rhythm Game"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/StartUpPage"]
layout_mode = 0
offset_left = 495.0
offset_top = 359.0
offset_right = 699.0
offset_bottom = 520.0
theme_override_constants/separation = 17

[node name="StartButton" type="Button" parent="CanvasLayer/StartUpPage/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_gl2rg")
theme_override_font_sizes/font_size = 88
theme_override_styles/normal = SubResource("StyleBoxFlat_y4ydu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_47v0h")
theme_override_styles/hover = SubResource("StyleBoxFlat_rlhb6")
text = "Start"

[node name="LeaderboardButton" type="Button" parent="CanvasLayer/StartUpPage/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_gl2rg")
theme_override_font_sizes/font_size = 79
theme_override_styles/normal = SubResource("StyleBoxFlat_uxver")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bx58v")
theme_override_styles/hover = SubResource("StyleBoxFlat_sgmfo")
text = "Leaderboard"

[node name="QuitButton" type="Button" parent="CanvasLayer/StartUpPage/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_gl2rg")
theme_override_font_sizes/font_size = 88
theme_override_styles/normal = SubResource("StyleBoxFlat_uxver")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bx58v")
theme_override_styles/hover = SubResource("StyleBoxFlat_sgmfo")
text = "Quit"

[connection signal="pressed" from="CanvasLayer/StartUpPage/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/StartUpPage/VBoxContainer/LeaderboardButton" to="." method="_on_leaderboard_button_pressed"]
[connection signal="pressed" from="CanvasLayer/StartUpPage/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
